--- a/src/main/resources/com/example/courseproject/hello-view.fxml
+++ b/src/main/resources/com/example/courseproject/hello-view.fxml
@@ -32,26 +32,29 @@
             <Button id="forOrdinates" fx:id="calculateOrdinateButton" layoutX="14.0" layoutY="297.0" mnemonicParsing="false" onAction="#setCalculateOrdinateButton" text="Вычислить" visible="false" />
             <Text id="forOrdinates" layoutX="102.0" layoutY="314.0" strokeType="OUTSIDE" strokeWidth="0.0" text="n =" visible="false" />
             <Text id="forOrdinates" fx:id="ordinateResultText" layoutX="126.0" layoutY="314.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" visible="false" />
-            <Label id="forAngles" layoutX="24.0" layoutY="30.0" mnemonicParsing="true" text="Введите высоту h,см от земляного полотна до нижней постели шпалы" />
-            <TextField id="forAngles" fx:id="heightTextfield" layoutX="29.0" layoutY="52.0" prefHeight="25.0" prefWidth="96.0" promptText="h, см" />
-            <Polyline id="forAngles" fill="#d36110" layoutX="301.0" layoutY="246.0" points="-50.0, -40.0, 50.0, -40.0, 1.0, -25.0, -50.0, -40.0" stroke="TRANSPARENT" strokeType="INSIDE" />
-            <Polyline id="forAngles" fill="#d36110" layoutX="320.0" layoutY="130.0" points="30.0, 0.0, 30.0, 76.0, -68.0, 76.0, -68.0, 0.0" stroke="TRANSPARENT" strokeType="INSIDE" />
-            <Polyline id="forAngles" fill="#d36110" layoutX="301.0" layoutY="67.0" points="-27.0, 37.0, 25.0, 37.0, 49.0, 63.0, -49.0, 63.0" stroke="TRANSPARENT" strokeType="INSIDE" />
-            <Line id="forAngles" endX="100.0" layoutX="301.0" layoutY="167.0" startX="-100.0" />
-            <Line id="forAngles" endX="100.0" layoutX="301.0" layoutY="297.0" startX="-100.0" />
-            <Line id="forAngles" endX="74.0" endY="60.5" layoutX="227.0" layoutY="236.0" startX="25.0" startY="-68.0" />
-            <Line id="forAngles" endX="-127.0" endY="-76.0" layoutX="477.0" layoutY="244.0" startX="-175.29290771484375" startY="52.5" />
-            <Polygon id="forAngles" fill="DODGERBLUE" layoutX="87.0" layoutY="231.0" points="214.0, 66.0, 165.0, -63.0, 164.29290771484375, 66.20709228515625" stroke="BLACK" strokeType="INSIDE" />
-            <Text id="forAngles" layoutX="210.0" layoutY="193.0" strokeType="OUTSIDE" strokeWidth="0.0" text="угол a" />
-            <Text id="forAngles" layoutX="193.0" layoutY="246.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Высота h" />
-            <Text id="forAngles" layoutX="282.0" layoutY="140.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Шпала" />
-            <Text id="forAngles" layoutX="260.0" layoutY="314.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Земляное полотно" />
-            <Text id="forAngles" layoutX="422.0" layoutY="236.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Балласт" />
-            <Button id="forAngles" fx:id="calculateAngleButton" onAction="#setCalculateAngleButton" layoutX="29.0" layoutY="358.0" mnemonicParsing="false" text="Вычислить" />
-            <Text id="forAngles" layoutX="122.0" layoutY="375.0" strokeType="OUTSIDE" strokeWidth="0.0" text="a = " />
+            <Text id="forOrdinates" layoutX="101.0" layoutY="335.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Q =" visible="false" />
+            <Label id="forAngles" layoutX="24.0" layoutY="30.0" mnemonicParsing="true" text="Введите высоту h,см от земляного полотна до нижней постели шпалы" visible="false" />
+            <TextField id="forAngles" fx:id="heightTextfield" layoutX="29.0" layoutY="52.0" prefHeight="25.0" prefWidth="96.0" promptText="h, см" visible="false" />
+            <Polyline id="forAngles" fill="#d36110" layoutX="301.0" layoutY="246.0" points="-50.0, -40.0, 50.0, -40.0, 1.0, -25.0, -50.0, -40.0" stroke="TRANSPARENT" strokeType="INSIDE" visible="false" />
+            <Polyline id="forAngles" fill="#d36110" layoutX="320.0" layoutY="130.0" points="30.0, 0.0, 30.0, 76.0, -68.0, 76.0, -68.0, 0.0" stroke="TRANSPARENT" strokeType="INSIDE" visible="false" />
+            <Polyline id="forAngles" fill="#d36110" layoutX="301.0" layoutY="67.0" points="-27.0, 37.0, 25.0, 37.0, 49.0, 63.0, -49.0, 63.0" stroke="TRANSPARENT" strokeType="INSIDE" visible="false" />
+            <Line id="forAngles" endX="100.0" layoutX="301.0" layoutY="167.0" startX="-100.0" visible="false" />
+            <Line id="forAngles" endX="100.0" layoutX="301.0" layoutY="297.0" startX="-100.0" visible="false" />
+            <Line id="forAngles" endX="74.0" endY="60.5" layoutX="227.0" layoutY="236.0" startX="25.0" startY="-68.0" visible="false" />
+            <Line id="forAngles" endX="-127.0" endY="-76.0" layoutX="477.0" layoutY="244.0" startX="-175.29290771484375" startY="52.5" visible="false" />
+            <Polygon id="forAngles" fill="DODGERBLUE" layoutX="87.0" layoutY="231.0" points="214.0, 66.0, 165.0, -63.0, 164.29290771484375, 66.20709228515625" stroke="BLACK" strokeType="INSIDE" visible="false" />
+            <Text id="forAngles" layoutX="210.0" layoutY="193.0" strokeType="OUTSIDE" strokeWidth="0.0" text="угол a" visible="false" />
+            <Text id="forAngles" layoutX="193.0" layoutY="246.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Высота h" visible="false" />
+            <Text id="forAngles" layoutX="282.0" layoutY="140.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Шпала" visible="false" />
+            <Text id="forAngles" layoutX="260.0" layoutY="314.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Земляное полотно" visible="false" />
+            <Text id="forAngles" layoutX="422.0" layoutY="236.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Балласт" visible="false" />
+            <Button id="forAngles" fx:id="calculateAngleButton" layoutX="29.0" layoutY="358.0" mnemonicParsing="false" onAction="#setCalculateAngleButton" text="Вычислить" visible="false" />
+            <Text id="forAngles" layoutX="122.0" layoutY="375.0" strokeType="OUTSIDE" strokeWidth="0.0" text="a = " visible="false" />
             <Text id="forAngles" fx:id="angleResultText" layoutX="144.0" layoutY="375.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" visible="false" />
-            <Text id="forAngles" layoutX="26.0" layoutY="114.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ширина шпалы, см" />
-            <ComboBox id="forAngles" fx:id="sleeperWidthCombobox" layoutX="27.0" layoutY="123.0" onMouseClicked="#setSleeperWidthCombobox" prefHeight="25.0" prefWidth="96.0" />
+            <Text id="forAngles" layoutX="26.0" layoutY="114.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ширина шпалы, см" visible="false" />
+            <ComboBox id="forAngles" fx:id="sleeperWidthCombobox" layoutX="27.0" layoutY="123.0" onMouseClicked="#setSleeperWidthCombobox" prefHeight="25.0" prefWidth="96.0" visible="false" />
+            <Text layoutX="231.0" layoutY="218.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Выберите какой расчёт нужно произвести!" />
+            <Text id="forOrdinates" fx:id="forceResultText" layoutX="130.0" layoutY="335.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" visible="false" />
          </children>
       </AnchorPane>
       <Button fx:id="forOrdinatesButton" layoutX="14.0" layoutY="46.0" mnemonicParsing="false" onAction="#setForOrdinatesButton" prefHeight="25.0" prefWidth="130.0" text="Ординаты поперечных сил" />
